--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div class="header">
         <h1>National US Health Data</h1>
     </div>
-    <select id="selectButton"></select>
-    <!-- <div>
+    <!-- <select id="selectButton"></select> -->
+    <div>
         <select id="dropdownMenu">
             <option value="poverty_perc">Poverty Percent</option>
             <option value="median_income">Median Income</option>
@@ -29,7 +29,8 @@
             <option value="percent_stroke">Percent that has had a Stroke</option>
             <option value="percent_high_cholesterol">Percent with High Cholesterol</option>
         </select>
-    </div> -->
+    </div>
+    <div id="tooltip"></div>
     <div class="grid-container">
         <div class="grid-item">
             <svg id="choropleth1" height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1"> <defs> <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5"> <image xlink:href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgogIDxyZWN0IHdpZHRoPSc1JyBoZWlnaHQ9JzUnIGZpbGw9J3doaXRlJy8+CiAgPHBhdGggZD0nTTAgNUw1IDBaTTYgNEw0IDZaTS0xIDFMMSAtMVonIHN0cm9rZT0nIzg4OCcgc3Ryb2tlLXdpZHRoPScxJy8+Cjwvc3ZnPg==" x="0" y="0" width="5" height="5"> </image> </pattern> </defs></svg>
